force-app/main/default/objects/Expense__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client(クライアント）</label>
    <length>50</length>
    <type>Text</type>
</CustomField>