force-app/main/default/objects/Expense__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date（日付）</label>
    <type>Date</type>
</CustomField>