force-app/main/default/objects/Expense__c/fields/Reimbursed__c.field-meta.xml
<CustomField>
    <fullName>Reimbursed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reimbursed（払い戻し済み）</label>
    <type>Checkbox</type>
</CustomField>